# foojay-disco

./: Cargo.toml
cli/: Cargo.toml
cli/src/: main.rs
src/: lib.rs
src/distributions/: mod.rs
src/http/: api_url.rs  mod.rs
src/major_versions/: mod.rs
src/package/: mod.rs
