[package]
name = "foojay_disco"
version = "0.1.0"
edition = "2021"
authors = ["Alexander Hansen <alex@bitzero.me>"]
license = "MIT"

[dependencies]
reqwest = { version = "0.12.15", default-features = false, features = ["blocking", "rustls-tls"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
thiserror = "2.0.12"
url = "2.5.4"

[workspace]
members = ["cli"]
